# ssclassifier

./: .gitignore  Dockerfile  README.md  config.yaml  pyproject.toml  repository.yaml  run.sh
app/: classifier.py  geometry.py  main.py  schemas.py  utils.py
app/static/: index.html
models/: rf_model.joblib
ssocr_addon/: Dockerfile  config.yaml  pyproject.toml
ssocr_addon/app/static/: index.html  train.html
ssocr_addon/models/: rf_model.joblib
ssocr_addon/scripts/: train.py
ssocr_addon/tests/: test_core.py
