[project]
name = "ssclassifier"
version = "0.1.0"
description = "Home Assistant custom add-on for seven-segment OCR from image files."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.28.0",
    "pydantic>=2.6.0",
    "numpy>=1.26.0",
    "opencv-python-headless>=4.9.0.0",
    "scikit-learn>=1.4.0",
    "joblib>=1.3.0",
    "python-multipart>=0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
